--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         tools:targetApi="31">
         <activity
             android:name=".StartActivity"
-            android:exported="true" >
+            android:exported="false" >
 
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
 
         </activity>
         <activity android:name=".ProfileActivity"
