--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-common-jvm:2.8.0'
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
+
+    // Import the BoM for the Firebase platform
+    implementation  'com.google.firebase:firebase-bom:33.0.0'
+
+    // Add the dependency for the Firebase Authentication library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-auth'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
